# WaifuPics

./: .gitignore  CMakeLists.txt  README.md  WaifuPics.sln  WaifuPics.vcxproj  WaifuPics.vcxproj.filters
.github/workflows/: msbuild.yml  qtbuild.yml
QtMsBuild/: qt_tasks.targets
src/: ImageView.cpp  ImageView.h  main.cpp  widget.cpp  widget.h  widget.ui
